remove avatar float to fix alignment in comments

--- a/style.css
+++ b/style.css
@@ -509,7 +509,6 @@ ul.pings.commentlist {
 }
 
 img.avatar {
-	float:left;
 	z-index:200;
 	margin-right:15px;
 	margin-bottom: 10px;
